# my_toy_ray_tracer

./: .gitignore  CMakeLists.txt  README.MD
models/: Dog2.mtl  Sea Urchin2.mtl  dragon2.mtl
src/Main/: hittable.h  main.cc  material.h  mesh_triangle.h  skybox.h  sphere.h
src/TheNextWeek/: hittable.h  main.cc  mesh_triangle.h
src/common/: OBJ_Loader.hpp  texture.h  vec3.h
